--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <title>vr-protocol demo</title>
     <style>
       body { font: 32px sans-serif; margin: 30px; }
       nav p { display: inline-block; }
